--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Minha Pokedex</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
@@ -15,14 +16,27 @@
       </div>
     </header>
     <section>
-      <div id="conteudo-um">
-        <img src="images/pickachu.png" />
-        <h2>Primeiro texto</h2>
+      <div class="conteudo">
+        <div>
+          <img src="images/pickachu.png" id="pikachu" />
+        </div>
+        <div id="texto-um">
+          <h2>Seu pokemon favorito</h2>
+          <p>Aqui está o pokemon que vc mais utiliza em sua jornada.</p>
+        </div>
       </div>
 
-      <div id="conteudo-dois">
-        <h2>Segundo texto</h2>
-        <img src="images/pockemons.jpg" />
+      <div class="conteudo">
+        <div id="texto-dois">
+          <h2>Seja bem-vindo treinador.</h2>
+          <p>
+            Essa é sua Pokedex, a sua companheira inseparável da jornada. Aqui
+            vc encontra todos os pokemos vistos, bem como os capturados por vc!
+          </p>
+        </div>
+        <div>
+          <img src="images/pockemons.jpg" />
+        </div>
       </div>
     </section>
     <footer>
