--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <body>
     <header>
       <div id="menu">
-        <a href="#">Inicio</a>
-        <a href="#">Pokemons</a>
+        <a href="index.html">Inicio</a> | <a href="pokemons.html">Pokemons</a> |
         <a href="#">Contatos</a>
       </div>
     </header>
