--- a/pokemons.html
+++ b/pokemons.html
@@ -16,61 +16,50 @@
     </header>
 
     <section>
-      <div class="conteudo">
-        <div>
-          <img src="images/agua.png" id="pickachu" />
+      <div id="lista-pokemons">
+        <div class="pokemon" id="bulbasaur">
+          <img src="images/001.png" alt="" />
+          <div class="descricao">
+            <span>n° 001</span>
+            <h2>Bulbasaur</h2>
+          </div>
+          <div class="tipos">
+            <span class="grass">grass</span>
+            <span class="poison">poison</span>
+          </div>
         </div>
-        <div id="texto-um">
-          <h2>Water (água)</h2>
-          <p>
-            Ele tem apenas duas fraquezas (enquanto alguns tipos chegam a ter
-            cinco): electric-type e grass-type. Seus ataques são efetivos contra
-            Pokémon fire-type, rock-type e ground-type, mas causam dano reduzido
-            em dragon-type, grass-type e water-type.
-          </p>
-        </div>
-      </div>
 
-      <div class="conteudo">
-        <div>
-          <img src="images/fogo.png" id="pickachu" />
+        <div class="pokemon">
+          <img src="images/004.png" alt="" />
+          <div class="descricao">
+            <span>n° 004</span>
+            <h2>Charmander</h2>
+          </div>
+          <div class="tipos">
+            <span class="fire">fire</span>
+          </div>
         </div>
-        <div id="texto-um">
-          <h2>Fire (fogo)</h2>
-          <p>
-            Este é um ataque do tipo Fogo usado por um Pokémon Dynamax. O
-            usuário intensifica o sol por cinco turnos. O usuário ataca
-            acendendo uma pequena pedra e lançando-a como uma bola de fogo no
-            alvo.
-          </p>
-        </div>
-      </div>
 
-      <div class="conteudo">
-        <div>
-          <img src="images/eletrico.png" id="pickachu" />
+        <div class="pokemon" id="bulbasaur">
+          <img src="images/005.png" alt="" />
+          <div class="descricao">
+            <span>n° 005</span>
+            <h2>Chameleon</h2>
+          </div>
+          <div class="tipos">
+            <span class="fire">fire</span>
+          </div>
         </div>
-        <div id="texto-um">
-          <h2>Electric (elétrico)</h2>
-          <p>
-            O tipo Elétrico é, também, um dos queridinhos da franquia. Isso
-            porque, a cada geração, pelo menos um roedor elétrico com bochechas
-            que armazenam energia é criado.
-          </p>
-        </div>
-      </div>
 
-      <div class="conteudo">
-        <div>
-          <img src="images/grama.png" id="pickachu" />
-        </div>
-        <div id="texto-um">
-          <h2>Bulbasaur (grama)</h2>
-          <p>
-            Bulbasaur é um Pokémon do tipo grama/venenoso que até o seu estágio
-            final tem a Ability Overgrow que permite que ele cause mais dano com
-            ataques do tipo grama quando está com pouco HP.
-          </p>
+        <div class="pokemon">
+          <img src="images/007.png" alt="" />
+          <div class="descricao">
+            <span>n° 007</span>
+            <h2>Squirtle</h2>
+          </div>
+          <div class="tipos">
+            <span class="water">water</span>
+          </div>
         </div>
       </div>
     </section>
